// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header snapshot tests should match snapshot with isAuth to false 1`] = `
<header>
  <nav>
    <ul>
      <li>
        <Link
          href="/"
        >
          home
        </Link>
      </li>
      <li>
        <Link
          href="/properties"
        >
          properties
        </Link>
      </li>
      <AuthItems />
    </ul>
  </nav>
</header>
`;

exports[`Header snapshot tests should match snapshot with isAuth to true 1`] = `
<header>
  <nav>
    <ul>
      <li>
        <Link
          href="/"
        >
          home
        </Link>
      </li>
      <li>
        <Link
          href="/properties"
        >
          properties
        </Link>
      </li>
      <LoggedItems
        logout={[Function]}
      />
    </ul>
  </nav>
</header>
`;
